--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,8 @@
         </div>
 
         <div th:if="${param.logout}" class="alert alert-info" role="alert">
-          로그아웃 되었습니다.
+          <i class="bi bi-info-circle-fill me-2"></i>
+          성공적으로 로그아웃되었습니다. 다시 로그인하려면 아래 정보를 입력하세요.
         </div>
 
         <div class="form-floating mb-2">
