--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -29,12 +29,12 @@
         </div>
 
         <div class="mb-3">
-          <label for="email" class="form-label">Your Email:</label>
+          <label for="email" class="form-label">이메일 주소:</label>
           <input type="email" class="form-control" id="email" th:field="*{email}" required />
         </div>
 
         <div class="mb-3">
-          <label for="password" class="form-label">Password:</label>
+          <label for="password" class="form-label">비밀번호:</label>
           <input type="password" class="form-control" id="password" th:field="*{password}" required />
         </div>
 
