--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -25,7 +25,7 @@
 
         <!-- 이메일 중복 경고 -->
         <div th:if="${emailExists}" class="alert alert-danger" role="alert">
-          Email already exists
+          이미 존재하는 이메일입니다. 다른 이메일로 가입해주세요.
         </div>
 
         <div class="mb-3">
@@ -39,7 +39,7 @@
         </div>
 
         <div class="d-grid">
-          <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
+          <button type="submit" class="btn btn-primary btn-lg">회원 가입 진행</button>
         </div>
       </form>
     </div>
