--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -216,6 +216,7 @@
                     <strong>안내:</strong> 일반 사용자는 상품 목록 조회만 가능합니다.
                 </div>
 
+                <div style="margin-top: 2rem;"></div>
                 <div class="d-flex gap-2 mt-3">
                     <form th:action="@{/logout}" method="post" class="d-inline">
                         <button type="submit" class="btn btn-danger"><i class="bi bi-box-arrow-right me-1"></i>로그아웃</button>
