--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -42,7 +42,7 @@
             <button type="submit" class="btn btn-primary btn-lg">회원 가입 진행</button>
           </div>
           <div class="d-grid mb-2">
-            <a th:href="@{/login}" class="btn btn-outline-secondary">이미 계정이 있으신가요? 로그인</a>
+            <a th:href="@{/login}" class="btn btn-outline-secondary">이미 계정이 있으신가요? 로그인 진행</a>
           </div>
         </form>
         <div class="d-grid mt-3">
